discord-frontend/hartex-discord-commands-test/tests/ui/expected_literal1.stderr
error: unexpected end of input, expected literal
  --> tests/ui/expected_literal1.rs:25:1
   |
25 | #[metadata(command_type =)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this procedural macro expansion
   |
  ::: $WORKSPACE/hartex-discord-commands-macros/src/lib.rs
   |
   | pub fn metadata(tokens: TokenStream, item: TokenStream) -> TokenStream {
   | ---------------------------------------------------------------------- in this expansion of `#[metadata]`
